--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Noodles Recipe</title>
 </head>
 <body>
     <h1>
-        "Odin Recipes"
+        "Noodles"
     </h1>
-
-    
 </body>
 </html>
