--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Taco Recipe</title>
 </head>
 <body>
     <h1>
-        "Odin Recipes"
+        "Tacos"
     </h1>
 
-    
 </body>
 </html>
