Add links for switching pages

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         "Odin Recipes"
     </h1>
 
-    
+    <a href="recipes/pizza.html">Pizza</a>
+    <a href="recipes/noodles.html">Noodles</a>
+    <a href="recipes/tacos.html">Tacos</a>
 </body>
 </html>
