--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -9,6 +9,28 @@
     <h1>
         "Pizza"
     </h1>
+    <img src="../images/pizza.png">
+
+    <h3>
+        "Description"
+    </h3>
+        <p>
+            "e"
+        </p>
+    
+    <h3>
+        "Ingredients"
+    </h3>
+        <ul>
+            <li></li>
+        </ul>
+
+    <h3>
+        "Steps"
+    </h3>
+        <ol>
+            <li></li>
+        </ol>
 
     <a href="../index.html">Home</a>
 </body>
